[gd_scene load_steps=14 format=3 uid="uid://ckwf7fhlqg36c"]

[ext_resource type="Script" uid="uid://px2iqj748ysi" path="res://scripts/game_tracker.gd" id="1_5pqqo"]
[ext_resource type="Texture2D" uid="uid://c3ssbvae82jk2" path="res://assets/art/GameTrackerBackground.png" id="2_h0i2o"]
[ext_resource type="FontFile" uid="uid://bypmpvinq8cf6" path="res://assets/fonts/Pixel Game.otf" id="3_velld"]
[ext_resource type="Texture2D" uid="uid://cwwschqjxu33v" path="res://assets/art/GameTracker_Station_Bubble.png" id="4_3vjfg"]
[ext_resource type="Texture2D" uid="uid://e24tdrsn0fub" path="res://assets/art/Shipping_Icon.png" id="5_0b0py"]
[ext_resource type="Texture2D" uid="uid://b6k61tluj0y52" path="res://assets/art/GameTracker_Mini-Bubble.png" id="5_2nb3p"]
[ext_resource type="Texture2D" uid="uid://drs13jx0nut5f" path="res://assets/art/Dock_Receive_Icon.png" id="6_0b0py"]
[ext_resource type="Texture2D" uid="uid://d1iyr5h1mhct1" path="res://assets/art/Speech_Bubble.png" id="6_velld"]
[ext_resource type="AudioStream" uid="uid://txvtl2fpddh2" path="res://assets/music/Game_Tracker.mp3" id="7_3vjfg"]
[ext_resource type="Texture2D" uid="uid://dgo63duolrq24" path="res://assets/art/Arrow_Key_Group.png" id="10_cqpt7"]
[ext_resource type="Texture2D" uid="uid://ddesgewc0v81f" path="res://assets/art/Mouse_Cursor.png" id="11_qx3mk"]
[ext_resource type="Texture2D" uid="uid://cldltiy8t0put" path="res://assets/art/Keyboard_Key.png" id="12_dgwks"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0b0py"]
texture = ExtResource("2_h0i2o")

[node name="GameTracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pqqo")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0b0py")

[node name="StationTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 34.0
offset_right = 1148.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.356863, 0.431373, 0.882353, 1)
theme_override_fonts/font = ExtResource("3_velld")
theme_override_font_sizes/font_size = 96
text = "DOCK RECEIVE"
horizontal_alignment = 1

[node name="LastGameBubble" type="Sprite2D" parent="."]
position = Vector2(18, 449)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_3vjfg")

[node name="LastGameBubbleSprite" type="Sprite2D" parent="."]
position = Vector2(20, 455)
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_0b0py")

[node name="CurrentGameBubble" type="Sprite2D" parent="."]
position = Vector2(568, 449)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_3vjfg")

[node name="CurrentGameBubbleSprite" type="Sprite2D" parent="."]
position = Vector2(569, 455)
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_0b0py")

[node name="NextGameBubble" type="Sprite2D" parent="."]
position = Vector2(1118, 449)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_3vjfg")

[node name="NextGameBubbleSprite" type="Sprite2D" parent="."]
position = Vector2(1120, 455)
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_0b0py")

[node name="MiniBubblesLeft" type="Control" parent="."]
anchors_preset = 0
offset_left = -135.0
offset_top = 79.0
offset_right = 419.0
offset_bottom = 642.0

[node name="MiniBubble" type="Sprite2D" parent="MiniBubblesLeft"]
position = Vector2(347, 362)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_2nb3p")
metadata/_edit_lock_ = true

[node name="MiniBubble2" type="Sprite2D" parent="MiniBubblesLeft"]
position = Vector2(427, 362)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_2nb3p")
metadata/_edit_lock_ = true

[node name="MiniBubble3" type="Sprite2D" parent="MiniBubblesLeft"]
position = Vector2(507, 362)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_2nb3p")
metadata/_edit_lock_ = true

[node name="MiniBubblesRight" type="Control" parent="."]
anchors_preset = 0
offset_left = 415.0
offset_top = 80.0
offset_right = 991.0
offset_bottom = 562.0

[node name="MiniBubble" type="Sprite2D" parent="MiniBubblesRight"]
position = Vector2(347, 362)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_2nb3p")
metadata/_edit_lock_ = true

[node name="MiniBubble2" type="Sprite2D" parent="MiniBubblesRight"]
position = Vector2(427, 362)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_2nb3p")
metadata/_edit_lock_ = true

[node name="MiniBubble3" type="Sprite2D" parent="MiniBubblesRight"]
position = Vector2(507, 362)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_2nb3p")
metadata/_edit_lock_ = true

[node name="DescriptionBubble" type="Sprite2D" parent="."]
position = Vector2(566, 272)
scale = Vector2(0.5, 0.45)
texture = ExtResource("6_velld")

[node name="DescriptionText" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 180.0
offset_right = 779.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0.388235, 0.607843, 1, 1)
theme_override_fonts/font = ExtResource("3_velld")
theme_override_font_sizes/font_size = 40
text = "Long ago, the four nations..."
autowrap_mode = 3

[node name="HintText" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 576.0
offset_right = 1150.0
offset_bottom = 632.0
theme_override_colors/font_color = Color(0.356863, 0.431373, 0.882353, 1)
theme_override_fonts/font = ExtResource("3_velld")
theme_override_font_sizes/font_size = 48
text = "Press Enter/space to continue"
horizontal_alignment = 1

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3vjfg")
parameters/looping = true

[node name="ArrowKeysGraphic" type="Sprite2D" parent="."]
visible = false
position = Vector2(899, 251)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_cqpt7")

[node name="MouseCursorGraphic" type="Sprite2D" parent="."]
visible = false
position = Vector2(899, 251)
texture = ExtResource("11_qx3mk")

[node name="ArrowKeysAndEnterGraphics" type="Node2D" parent="."]
visible = false
position = Vector2(899, 251)

[node name="ArrowKeys" type="Sprite2D" parent="ArrowKeysAndEnterGraphics"]
position = Vector2(-14, -25)
scale = Vector2(0.4, 0.4)
texture = ExtResource("10_cqpt7")

[node name="Enter" type="Sprite2D" parent="ArrowKeysAndEnterGraphics"]
position = Vector2(30, 39)
scale = Vector2(0.05, 0.05)
texture = ExtResource("12_dgwks")

[node name="MouseCursorAndEnterGraphics" type="Node2D" parent="."]
visible = false
position = Vector2(899, 251)

[node name="MouseCursor" type="Sprite2D" parent="MouseCursorAndEnterGraphics"]
position = Vector2(3, -34)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_qx3mk")

[node name="Enter" type="Sprite2D" parent="MouseCursorAndEnterGraphics"]
position = Vector2(7, 33)
scale = Vector2(0.06, 0.06)
texture = ExtResource("12_dgwks")
